@@ -1,3 +1,12 @@
+2009-01-20  Martin Nordholts  <martinn@svn.gnome.org>
+
+	Adjust to babl API adjustment by doing
+	s/babl_format_from_name/babl_format/
+
+	* app/gegl/gimp-gegl-utils.c
+	* app/gegl/gimpoperationpointlayermode.c
+	* app/gegl/gimpoperationtilesource.c
+
 2009-01-19  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/*.c
